--- a/podakaland.html
+++ b/podakaland.html
@@ -142,11 +142,11 @@
         <div class="container">
             <h2 class="mb-4 fw-bold modern-related-title torok-szentely-cim gradient-text">
                 <i class="bi bi-sun-fill me-2 text-warning torok-szentely-ikon"></i>
-                Takács Csongor Szentélye – Türkiye'nin Kalbinde
+                Takáts Csongor Szentélye – Türkiye'nin Kalbinde
                 <i class="bi bi-sun-fill ms-2 text-warning torok-szentely-ikon"></i>
             </h2>
             <p class="lead modern-related-lead mb-4 torok-szentely-lead">
-                Ez a szentély a Turkish Photons univerzumának legszentebb helye, ahol minden nap imádkozunk Takács
+                Ez a szentély a Turkish Photons univerzumának legszentebb helye, ahol minden nap imádkozunk Takáts
                 Csongorért, a fény és kebab védelmezőjéért.<br>
                 <span class="fw-bold text-danger">"Allahım, áldd meg Csongort és Törökországot!"</span>
             </p>
@@ -198,9 +198,9 @@
                 <!-- Középső oszlop: Csongor -->
                 <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
                     <div class="torok-szentely-csongor-card p-4 mb-3">
-                        <img src="img/török.jpg" alt="Takács Csongor"
+                        <img src="img/török.jpg" alt="Takáts Csongor"
                             class="img-fluid rounded-circle shadow mb-3 torok-szentely-csongor">
-                        <h4 class="fw-bold text-warning mb-2"><i class="bi bi-person-hearts me-2"></i>Takács Csongor
+                        <h4 class="fw-bold text-warning mb-2"><i class="bi bi-person-hearts me-2"></i>Takáts Csongor
                         </h4>
                         <p class="fs-5 text-white-50 mb-3">A Turkish Photons univerzumának örökös patrónusa, a kebab, a
                             baklava és a fénytechnológia szentje.</p>
@@ -315,7 +315,7 @@
                 <div class="modal-header border-0 justify-content-center">
                     <h2 class="modal-title w-100 text-center holy-csongor-modal-title" id="csongorHolyModalLabel">
                         <i class="bi bi-stars text-warning me-2"></i>
-                        Szent Takács Csongor szól hozzád!
+                        Szent Takáts Csongor szól hozzád!
                         <i class="bi bi-stars text-warning ms-2"></i>
                     </h2>
                 </div>
@@ -324,7 +324,7 @@
                         "Duaların kabul edildi, evladım!"<br>
                         <span class="fs-4 text-warning">– Szent Csongor</span>
                     </div>
-                    <img src="img/török.jpg" alt="Takács Csongor"
+                    <img src="img/török.jpg" alt="Takáts Csongor"
                         class="img-fluid rounded-circle shadow holy-csongor-img mb-3" style="max-width: 120px;">
                     <p class="lead mt-3 mb-0 text-white-50">"Allah'ın és Türkiye'nin fénye mindig veled lesz."</p>
                 </div>
@@ -357,7 +357,7 @@
                                 alt="terrorist">
                             <h5 class="mt-3 fw-semibold text-dark">Csajági Sándor</h5>
                             <p class="mb-3 mt-3 fst-italic text-secondary">
-                                "Én azért lettem ennek a kultusznak a hívője, mert Takács Csongor nem csak tanít, hanem
+                                "Én azért lettem ennek a kultusznak a hívője, mert Takáts Csongor nem csak tanít, hanem
                                 megvilágosít. Ő az, aki a fényt nemcsak oktatja, hanem képviseli is. A hétfő reggeleket
                                 is értelmessé tudja tenni, és megmutatta, hogy a fizikán túl is van élet – egy fénylő,
                                 kebabillatú élet. Azóta tudom: nem csak tanár, hanem próféta."
